<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instructions"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.036"
        android:gravity="center"/>


    <com.example.lettergrabbermecacucsur.DrawingView
        android:id="@+id/drawingCanvas"
        android:layout_width="300sp"
        android:layout_height="300sp"
        android:layout_marginTop="12dp"
        android:layout_weight="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/message"
        android:background="@color/gray_400"/>

    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:hint="@string/name"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/drawingCanvas" />

    <EditText
        android:id="@+id/gradeEditText"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/grade"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameEditText"
        app:layout_constraintVertical_bias="0.1" />

    <EditText
        android:id="@+id/studentCodeEditText"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/studentCode"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gradeEditText"
        app:layout_constraintVertical_bias="0.12" />

    <TextView
        android:id="@+id/createdBy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/createdBy"
        app:layout_constraintBottom_toTopOf="@+id/capture"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/studentCodeEditText"
        app:layout_constraintVertical_bias="0.482" />

    <Button
        android:id="@+id/capture"
        android:layout_width="117dp"
        android:layout_height="47dp"
        android:text="@string/capture"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.187"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/studentCodeEditText"
        app:layout_constraintVertical_bias="0.666"
        android:backgroundTint="@color/green"
        />
<!--
    <Button
        android:id="@+id/predict"
        android:layout_width="40dp"
        android:layout_height="47dp"
        android:backgroundTint="@color/blue_A700"
        android:text="@string/predict"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/studentCodeEditText"
        app:layout_constraintVertical_bias="0.669" />
-->
    <Button
        android:id="@+id/clear"
        android:layout_width="117dp"
        android:layout_height="47dp"
        android:text="@string/clear"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.809"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/studentCodeEditText"
        app:layout_constraintVertical_bias="0.666"
        android:backgroundTint="@color/red"/>


</androidx.constraintlayout.widget.ConstraintLayout>